feat: регистрация по имени вместо никнейма
